Add some translations

--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -7,22 +7,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-11-24 10:04+0000\n"
-"PO-Revision-Date: 2021-04-14 16:57+0900\n"
+"PO-Revision-Date: 2021-11-26 12:39+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/cassandra.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Using the Cassandra Client"
+#, no-wrap
 msgid "Using the Cassandra Client"
 msgstr "Cassandraクライアントの使用"
 
@@ -54,10 +53,8 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:24
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately;"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately;"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:27
@@ -110,10 +107,8 @@ msgstr "次の章で紹介する手順に沿って、ステップを踏んでア
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:57
-#, fuzzy
-#| msgid "The solution is located in the link:https://github.com/datastax/cassandra-quarkus/tree/master/quickstart[quickstart directory] of the Cassandra Quarkus extension GitHub repository."
 msgid "The solution is located in the link:https://github.com/datastax/cassandra-quarkus/tree/main/quickstart[quickstart directory] of the Cassandra Quarkus extension GitHub repository."
-msgstr "ソリューションは `quickstart` link:https://github.com/datastax/cassandra-quarkus/tree/master/quickstart[ディレクトリー] にあります。"
+msgstr "ソリューションはCassandra QuarkusエクステンションGitHubレポジトリの link:https://github.com/datastax/cassandra-quarkus/tree/main/quickstart[quickstart directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/cassandra.adoc:58
@@ -1369,9 +1364,8 @@ msgstr "EagerとLazyの初期化"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:744
-#, fuzzy
 msgid "This extension allows you to inject either:"
-msgstr "この拡張機能では、どちらかを注入することができます。"
+msgstr "このエクステンションでは、どちらかを注入することができます。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:746
