--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-06 08:09+0000\n"
-"PO-Revision-Date: 2021-03-06 23:39+0900\n"
+"PO-Revision-Date: 2021-11-26 12:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/command-mode-reference.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Writing Command Mode Applications"
+#, no-wrap
 msgid "Command Mode Applications"
-msgstr "コマンドモードアプリケーションの作成"
+msgstr "コマンドモードアプリケーション"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:11
@@ -33,25 +32,22 @@ msgstr "このリファレンスでは、実行して終了するアプリケー
 
 #. type: Title ==
 #: upstream/_guides/command-mode-reference.adoc:12
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:16
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:18
-#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
 msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:20
-#, fuzzy
 msgid "The solution is located in the `getting-started-command-mode` {quickstarts-tree-url}/getting-started-command-mode[directory]."
 msgstr "このソリューションは `getting-started-command-mode` {quickstarts-tree-url}/getting-started-command-mode[directory]にあります。"
 
@@ -240,26 +236,22 @@ msgstr "実行中のアプリケーションをシャットダウンしたい場
 
 #. type: Title ===
 #: upstream/_guides/command-mode-reference.adoc:115
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Development Mode"
 msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:118
-#, fuzzy
-#| msgid "Also for command mode applications the dev mode is supported. When running `mvn compile quarkus:dev`, the command mode application is executed and on press of the Enter key, is restarted."
 msgid "Also for command mode applications the dev mode is supported. When you run `mvn quarkus:dev`, the command mode application is executed."
-msgstr "また、コマンドモードアプリケーションでは、開発モードにも対応しています。 `mvn compile quarkus:dev` を実行しているときは、コマンドモードアプリケーションを実行し、Enter キーを押すと再起動します。"
+msgstr "また、コマンドモードアプリケーションでは、開発モードにも対応しています。 `mvn compile quarkus:dev` を実行すると、コマンドモードアプリケーションが実行されます。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:120
-#, fuzzy
 msgid "As command mode applications will often require arguments to be passed on the commandline, this is also possible in dev mode via the `quarkus.args` system property. For example `mvn quarkus:dev -Dquarkus.args='--help'` and the same can be achieved with Gradle: `./gradlew quarkusDev --quarkus-args='--help'`."
-msgstr "コマンドモードのアプリケーションでは、コマンドラインに引数を渡す必要がある場合が多いので、devモードでも `quarkus.args` システムプロパティを使って引数を渡すことができます。例えば、 `mvn quarkus:dev -Dquarkus.args='--help'` 、Gradleでも同じことができます。 `./gradlew quarkusDev --quarkus-args='--help'`."
+msgstr "コマンドモードのアプリケーションでは、コマンドラインに引数を渡す必要がある場合が多いので、devモードでも `quarkus.args` システムプロパティを使って引数を渡すことができます。例えば、 `mvn quarkus:dev -Dquarkus.args='--help'` であり、Gradleでも同じことが可能です: `./gradlew quarkusDev --quarkus-args='--help'` 。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:122
-#, fuzzy
 msgid "You should see the following down the bottom of the screen after the application is stopped:"
 msgstr "アプリケーションが停止した後、画面の下に以下のように表示されます。"
 
@@ -276,26 +268,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:131
-#, fuzzy
 msgid "You can press the `Space bar` key and the application will be started again.  You can also use the `e` hotkey to edit the command line arguments and restart your application."
-msgstr "`Space bar` キーを押せば、アプリケーションが再び起動します。また、 `e` ホットキーを使って、コマンドライン引数を編集し、アプリケーションを再起動することもできます。"
+msgstr "`スペースバー` キーを押せば、アプリケーションが再び起動します。また、 `e` ホットキーを使って、コマンドライン引数を編集し、アプリケーションを再起動することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/command-mode-reference.adoc:132
-#, fuzzy, no-wrap
-#| msgid "Writing Command Mode Applications"
+#, no-wrap
 msgid "Testing Command Mode Applications"
-msgstr "コマンドモードアプリケーションの作成"
+msgstr "コマンドモードアプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:137
-#, fuzzy
 msgid "Command Mode applications can be tested using the `@QuarkusMainTest` and `@QuarkusMainIntegrationTest` annotations. These work in a similar way to `@QuarkusTest` and `@QuarkusIntegrationTest` where `@QuarkusMainTest` will run the CLI tests within the current JVM, while `QuarkusIntegrationTest` is used to run the generated executable (both jars and native)."
 msgstr "コマンドモード・アプリケーションは、 `@QuarkusMainTest` および `@QuarkusMainIntegrationTest` のアノテーションを使用してテストすることができます。これらは、 `@QuarkusTest` および `@QuarkusIntegrationTest` と同様の方法で動作します。 `@QuarkusMainTest` は現在のJVM内でCLIテストを実行し、 `QuarkusIntegrationTest` は生成された実行ファイル（ジャーおよびネイティブの両方）を実行するために使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:139
-#, fuzzy
 msgid "We can write a simple test for our CLI application above as follows:"
 msgstr "上記のCLIアプリケーションの簡単なテストを以下のように書くことができます。"
 
@@ -355,9 +343,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:174
-#, fuzzy
 msgid "We can then extend this with an integration test that can be used to test the native executable or runnable jar:"
-msgstr "そして、これを統合テストで拡張し、ネイティブの実行ファイルや実行可能なjarをテストするために使用することができます。"
+msgstr "そして、これを統合テストで拡張し、ネイティブの実行ファイルや実行可能jarをテストするために使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:178
