--- a/l10n/po/ja_JP/_guides/platform.adoc.po
+++ b/l10n/po/ja_JP/_guides/platform.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-20 08:03+0000\n"
-"PO-Revision-Date: 2021-04-14 14:52+0900\n"
+"PO-Revision-Date: 2021-11-26 12:58+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/platform.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus Platform"
+#, no-wrap
 msgid "Platform"
-msgstr "Quarkusプラットフォーム"
+msgstr "プラットフォーム"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:11
@@ -39,8 +38,6 @@ msgstr "Quarkusプラットフォーム"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:16
-#, fuzzy
-#| msgid "The fundamental promise of a Quarkus platform is any combination of the Quarkus extensions the platform consists of can be used in the same application without causing any conflict for each other.  Each organization creating their Quarkus platform may establish their own criterions for the extensions to be accepted into the platform and the means to guarantee the compatibility between the accepted extensions."
 msgid "The fundamental promise of a Quarkus platform is any combination of the Quarkus extensions the platform consists of can be used in the same application without causing any conflict for each other.  Each organization creating their Quarkus platform may establish their own criteria for the extensions to be accepted into the platform and the means to guarantee the compatibility between the accepted extensions."
 msgstr "Quarkusプラットフォームの基本的な約束事は、プラットフォームで構成されるQuarkusエクステンションを組み合わせて、お互いに競合することなく同じアプリケーションで使用することができるということです。Quarkusプラットフォームを作成する各組織は、プラットフォームに受け入れられるエクステンションについて独自の基準を設定し、受け入れられたエクステンション間の互換性を保証する手段を確立することができます。"
 
@@ -144,17 +141,13 @@ msgstr "文字列としては次のようになります： `<platform-bom-group
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:51
-#, fuzzy
-#| msgid "E.g. the coordinates of the descriptor for Quarkus BOM `io.quarkus:quarkus-bom::pom:1.2.3` will be `io.quarkus:quarkus-bom-quarkus-platform-descriptor:1.2.3:json:1.2.3`.  And for a custom Quarkus platform defined with BOM `org.acme:acme-bom::pom:555` it will be `org.acme:acme-bom-quarkus-platform-descriptor:555:json:555`."
 msgid "E.g. the coordinates of the descriptor for the Quarkus BOM `io.quarkus.platform:quarkus-bom::pom:1.2.3` will be `io.quarkus.platform:quarkus-bom-quarkus-platform-descriptor:1.2.3:json:1.2.3`.  And for a custom Quarkus platform defined with BOM `org.acme:acme-bom::pom:555` it will be `org.acme:acme-bom-quarkus-platform-descriptor:555:json:555`."
 msgstr "例えば、Quarkus BOM `io.quarkus:quarkus-bom::pom:1.2.3` のディスクリプタの座標は `io.quarkus:quarkus-bom-quarkus-platform-descriptor:1.2.3:json:1.2.3` となります。また、BOM `org.acme:acme-bom::pom:555` で定義されたカスタムQuarkusプラットフォームの場合は、 `org.acme:acme-bom-quarkus-platform-descriptor:555:json:555` です。"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:53
-#, fuzzy
-#| msgid "The classifier matching the version of the platform may look confusing at first. But this is what turns the descriptor into a true \"fingerprint\" of the platform. In both Maven and Gradle, the effective set of the dependency version constraints (or the managed dependencies) is obtained by merging all the imported BOMs and version constraints specified individually in the current project and also its parent(s). The artifact `classifier` is a part of the dependency ID, which could be expressed as `groupId:artifactId:classifier:type`. Which means that if a project is based on a couple of Quarkus platforms (by importing their BOMs), e.g. `io.quarkus:quarkus-universe-bom::pom:1.2.3` and `org.acme:acme-bom::pom:555`, and these two platforms are based on different `io.quarkus:quarkus-bom::pom` versions (which is technically a Quarkus platform in its turn as well), the Quarkus tools will be able to detect this fact and make the user aware of it, since it *might* not be a safe combination. If the descriptor artifact didn't include the classifer containing the version of the platform then the tools wouldn't be able to detect a potentially incompatible mix of different versions of the same platform in the same project."
 msgid "The classifier matching the version of the platform may look confusing at first. But this is what turns the descriptor into a true \"fingerprint\" of the platform. In both Maven and Gradle, the effective set of the dependency version constraints (or the managed dependencies) is obtained by merging all the imported BOMs and version constraints specified individually in the current project and also its parent(s). The artifact `classifier` is a part of the dependency ID, which could be expressed as `groupId:artifactId:classifier:type`. Which means that if a project imports a couple of BOMs, e.g. `org.apple:apple-bom::pom:1.0` and `org.orange:orange-bom::pom:1.0`, and each of these two BOMs imports a different version `io.quarkus.platform:quarkus-bom::pom`, the Quarkus tools will be able to detect this fact and make the user aware of it, since it *might* not be a safe combination. If the descriptor artifact didn't include the classifer containing the version of the platform then the tools wouldn't be able to detect a potentially incompatible mix of different versions of the same platform in the same project."
-msgstr "プラットフォームのバージョンにマッチする分類は、最初は混乱するように見えるかもしれません。しかし、これがディスクリプタをプラットフォームの真の「フィンガープリント」に変えるものです。MavenとGradleの両方で、依存関係のバージョン制約（または管理された依存関係）の有効なセットは、現在のプロジェクトで個別に指定されたすべてのインポートされたBOMとバージョン制約、およびその親をマージすることによって得られます。アーティファクト `classifier` は依存関係 ID の一部であり、 `groupId:artifactId:classifier:type` と表現できます。つまり、プロジェクトが（BOMをインポートして）いくつかのQuarkusプラットフォームに基づいていて、例えば、 `io.quarkus:quarkus-universe-bom::pom:1.2.3` と `org.acme:acme-bom::pom:555` のように、これら2つのプラットフォームが異なるバージョンの `io.quarkus:quarkus-bom::pom` に基づいている場合（これは技術的には順番にQuarkusプラットフォームでもあります）、Quarkusツールはこの事実を検出して、安全な組み合わせではない *かもしれない* ので、ユーザーに認識させることができます。もし記述子の成果物にプラットフォームのバージョンを含む分類子が含まれていなかった場合、ツールは、同じプロジェクト内で同じプラットフォームの異なるバージョンが混在していても、互換性がない可能性があることを検出することはできません。"
+msgstr "プラットフォームのバージョンにマッチする分類は、最初は混乱するように見えるかもしれません。しかし、これがディスクリプタをプラットフォームの真の「フィンガープリント」に変えるものです。MavenとGradleの両方で、依存関係のバージョン制約（または管理された依存関係）の有効なセットは、現在のプロジェクトで個別に指定されたすべてのインポートされたBOMとバージョン制約、およびその親をマージすることによって得られます。アーティファクト `classifier` は依存関係 ID の一部であり、 `groupId:artifactId:classifier:type` と表現できます。つまり、プロジェクトがいくつかのBOM、例えば、 `org.apple:apple-bom::pom:1.0` と `org.orange:orange-bom::pom:1.0` をインポートし、これら2つのプラットフォームが異なるバージョンの `io.quarkus.platform:quarkus-bom::pom` に基づいている場合、Quarkusツールは安全な組み合わせではない *かもしれない* 事実を検知し、ユーザーに認識させることができます。もし記述子のアーティファクトにプラットフォームのバージョンを含む分類子が含まれていなかった場合、ツールは、同じプロジェクト内で同じプラットフォームの異なるバージョンが混在していても、互換性がない可能性があることを検出することはできません。"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:55
@@ -362,10 +355,8 @@ msgstr "つまり、あるプラットフォームがベースとなるプラッ
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:161
-#, fuzzy
-#| msgid "For example, the `quarkus-universe-bom` platform is based on the `quarkus-bom` platform. In case, the `quarkus-universe-bom` platform were to override certain properties defined in `quarkus-bom-quarkus-platform-properties` included into the `quarkus-bom` platform, the `quarkus-universe-bom` would have to be composed as"
 msgid "For example, let's assume `org.acme:acme-quarkus-bom` platform extends the `io.quarkus:quarkus-bom` platform by importing its BOM. In case, the `org.acme:acme-quarkus-bom` platform were to override certain properties defined in the `io.quarkus:quarkus-bom-quarkus-platform-properties` included in the `io.quarkus:quarkus-bom`, the `org.acme:acme-quarkus-bom` would have to be composed as"
-msgstr "例えば、 `quarkus-universe-bom` プラットフォームは `quarkus-bom` プラットフォームをベースにしています。 `quarkus-universe-bom` プラットフォームが、 `quarkus-bom` プラットフォームに含まれる `quarkus-bom-quarkus-platform-properties` で定義された特定のプロパティを上書きする場合、 `quarkus-universe-bom` は次のように構成されなければなりません。"
+msgstr "例えば、 `org.acme:acme-quarkus-bom` プラットフォームは `io.quarkus:quarkus-bom` プラットフォームをベースにしています。 `org.acme:acme-quarkus-bom` プラットフォームが、 `io.quarkus:quarkus-bom` プラットフォームに含まれる `io.quarkus:quarkus-bom-quarkus-platform-properties` で定義された特定のプロパティを上書きする場合、 `org.acme:acme-quarkus-bom` は次のように構成されなければなりません。"
 
 #. type: delimited block -
 #: upstream/_guides/platform.adoc:164 upstream/_guides/platform.adoc:189
@@ -413,7 +404,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:191
-#, fuzzy
-#| msgid "That way, the `quarkus-universe-bom` platform properties will appear before the `quarkus-bom` platform properties and so will be dominating during merging."
 msgid "That way, the `org.acme:acme-quarkus-bom` platform properties will appear before those provided by the `io.quarkus:quarkus-bom` properties and so will be dominating at build time."
-msgstr "こうすることで、 `quarkus-universe-bom` のプラットフォーム・プロパティが `quarkus-bom` のプラットフォーム・プロパティよりも先に現れる為、マージの際に優先されます。"
+msgstr "こうすることで、 `org.acme:acme-quarkus-bom` のプラットフォーム・プロパティが `io.quarkus:quarkus-bom のプラットフォーム・プロパティよりも先に現れる為、ビルドの際に優先されます。"
