Add some translations

--- a/l10n/po/ja_JP/_guides/gradle-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-config.adoc.po
@@ -7,26 +7,25 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: 2021-02-11 21:45+0900\n"
+"PO-Revision-Date: 2021-11-26 13:01+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/gradle-config.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Gradle Plugin Repositories"
+#, no-wrap
 msgid "Gradle Plugin Repositories"
 msgstr "Gradle プラグインリポジトリー"
 
-#.  tag::repositories[]
+#. tag::repositories[]
 #. type: Plain text
 #: upstream/_guides/gradle-config.adoc:12
 msgid "The Quarkus Gradle plugin is published to the https://plugins.gradle.org/plugin/io.quarkus[Gradle Plugin Portal]."
