--- a/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-11-24 10:04+0000\n"
-"PO-Revision-Date: 2021-11-08 14:19+0900\n"
+"PO-Revision-Date: 2021-11-26 13:04+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -32,10 +32,8 @@ msgstr "多くのWebアプリケーションは、REST APIを使った単調なC
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:16
-#, fuzzy
-#| msgid "While this extension is still experimental and provides a limited feature set, we hope to get an early feedback for it.  Currently this extension supports Hibernate ORM and MongoDB with Panache and can generate CRUD resources that work with `application/json` and `application/hal+json` content."
 msgid "While this extension is still experimental and provides a limited feature set, we hope to get an early feedback for it.  Currently, this extension supports Hibernate ORM and MongoDB with Panache and can generate CRUD resources that work with `application/json` and `application/hal+json` content."
-msgstr "このエクステンションはまだ実験的なものであり、限られた機能しか提供していませんが、早期にフィードバックが得られることを期待しています。現在のところ、このエクステンションは Hibernate ORM と MongoDB with Panache をサポートしており、 `application/json` と `application/hal+json` のコンテンツで動作する CRUD リソースを生成することができます。"
+msgstr "このエクステンションはまだ実験的なものであり、限られた機能セットしか提供していませんが、早期にフィードバックが得られることを期待しています。現在のところ、このエクステンションは Hibernate ORM と MongoDB with Panache をサポートしており、 `application/json` と `application/hal+json` のコンテンツで動作する CRUD リソースを生成することができます。"
 
 #. type: Title ==
 #: upstream/_guides/rest-data-panache.adoc:19
@@ -67,10 +65,8 @@ msgstr "JDBC ドライバーエクステンション ( `quarkus-jdbc-postgresql`
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:27
-#, fuzzy
-#| msgid "One of the RESTEasy JSON serialization extensions (`quarkus-resteasy-reactive-jackson` or `quarkus-resteasy-reactive-jsonb`)"
 msgid "One of the RESTEasy JSON serialization extensions (the extension supports both RESTEasy Classic and RESTEasy Reactive)"
-msgstr "RESTEasy JSON シリアライゼーションエクステンションのどれか ( `quarkus-resteasy-jackson` または `quarkus-resteasy-jsonb` )"
+msgstr "RESTEasy JSON シリアライゼーションエクステンションのどれか ( RESTEasy Classic と RESTEasy Reactive の両方をサポートしたエクステンション)"
 
 #. type: delimited block -
 #: upstream/_guides/rest-data-panache.adoc:52
