Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:16+0000\n"
+"POT-Creation-Date: 2021-11-27 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,9 +57,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:28
 #: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:38
 #: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:48
-#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:72
-#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:82
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:58
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:68
 #: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:92
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:102
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:112
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -104,7 +106,33 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:71
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:57
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.grpc-server.enabled]]`link:#quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.grpc-server.enabled[quarkus.micrometer.binder.grpc-server.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"gRPC Server metrics support. \n"
+" Support for gRPC server metrics will be enabled if Micrometer support is enabled, the gRPC server interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:67
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.grpc-client.enabled]]`link:#quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.grpc-client.enabled[quarkus.micrometer.binder.grpc-client.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"gRPC Client metrics support. \n"
+" Support for gRPC client metrics will be enabled if Micrometer support is enabled, the gRPC client interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:91
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.mp-metrics.enabled]]`link:#quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.mp-metrics.enabled[quarkus.micrometer.binder.mp-metrics.enabled]`\n"
@@ -131,7 +159,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:81
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:101
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.system]]`link:#quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.system[quarkus.micrometer.binder.system]`\n"
@@ -144,7 +172,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:91
+#: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-micrometer-config-binder-config.adoc:111
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.vertx.enabled]]`link:#quarkus-micrometer-config-group-config-micrometer-config-binder-config_quarkus.micrometer.binder.vertx.enabled[quarkus.micrometer.binder.vertx.enabled]`\n"
